--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,11 +30,15 @@ section#login {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    
     background-color: white;
     width: 250px;
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
+    
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
