--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -8,6 +8,7 @@
     
     section#login {
         width: 80vw;
+        height: 320px;
     }
 
     section#login > div#imagem {
@@ -30,6 +31,7 @@
     
     section#login {
         width: 950px;
+        height: 350px;
     }
     section#login > div#imagem {
         float: right;
@@ -46,7 +48,7 @@
 
 div#formulario > h1 {
     text-align: center;
-    margin-bottom: 10px;
+    font-size: 2.0em;
 }
 
 div#formulario > p {
